--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gatsby": "^4.15.2",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^2.16.0",
     "gatsby-plugin-sass": "^5.15.1",
     "gatsby-plugin-sharp": "^4.15.1",
     "gatsby-source-filesystem": "^4.15.0",
