--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-sharp": "^4.15.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
     "sass": "^1.52.2"
   },
   "devDependencies": {
