--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "bootstrap": "^5.1.3",
     "gatsby": "^4.15.2",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-google-gtag": "^4.19.0",
+    "gatsby-plugin-google-tagmanager": "^4.19.0",
     "gatsby-plugin-image": "^2.16.0",
     "gatsby-plugin-sass": "^5.15.1",
     "gatsby-plugin-sharp": "^4.15.1",
